@@ -1,3 +1,7 @@
+2006-12-19 Tim
+ PATCH: [ 1618444 ] Web: Add miscellaneous links
+  Web: links.php
+
 2006-12-18 Tim
  PATCH [ 1618320 ] Update Slovak translation status and add new translator
   Web\developer\l10n: status.xml
